<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverViewFragment">


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        app:layout_constraintStart_toStartOf="@id/mainImage"
        app:layout_constraintTop_toTopOf="@id/mainImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/timer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@+id/timer_textView"
        app:layout_constraintEnd_toEndOf="@+id/timer_textView"
        app:layout_constraintStart_toStartOf="@+id/timer_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/like_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timer_textView"
        app:layout_constraintEnd_toStartOf="@+id/timer_textView" />

    <ImageView
        android:id="@+id/like_imageView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toTopOf="@+id/like_textView"
        app:layout_constraintEnd_toEndOf="@+id/like_textView"
        app:layout_constraintStart_toStartOf="@+id/like_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage" />

    <ImageView
        android:id="@+id/vegetarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarian_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"

        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView" />

    <ImageView
        android:id="@+id/vegan_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageview"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageview"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageview" />

    <ImageView
        android:id="@+id/glutenfree_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textview"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textview"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textview"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/glutenfree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_iv"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_iv"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/dairyfree_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/glutenfree_iv"
        app:layout_constraintTop_toBottomOf="@+id/glutenfree_iv"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/dairyfree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        app:layout_constraintBottom_toBottomOf="@+id/dairyfree_iv"
        app:layout_constraintStart_toEndOf="@+id/dairyfree_iv"
        app:layout_constraintTop_toTopOf="@+id/dairyfree_iv"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/healthy_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/glutenfree_tv"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_tv"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_tv"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/healthy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_iv"
        app:layout_constraintStart_toEndOf="@+id/healthy_iv"
        app:layout_constraintTop_toTopOf="@+id/healthy_iv"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/cheap_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/dairyfree_tv"
        app:layout_constraintStart_toStartOf="@+id/healthy_iv"
        app:layout_constraintTop_toBottomOf="@+id/healthy_iv"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheap_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_iv"
        app:layout_constraintStart_toEndOf="@+id/cheap_iv"
        app:layout_constraintTop_toTopOf="@+id/cheap_iv"
        app:tint="@color/darkGray" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_imageview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Texview"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>